fixing mobile spacing issues

--- a/xmas/src/App.css
+++ b/xmas/src/App.css
@@ -360,6 +360,11 @@ form textarea {
   .address {
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 15px;
+  }
+
+  .address p {
+    margin: 10px;
   }
 
   .contact {
